--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,7 @@
 <html>
     
     <head>
-        <style>
-            #number {border-radius: 15px;
-                            width: 100%; height: 45px;}
-            #result_button {color:white; background-color:cadetblue; border-radius: 5px;
-                            width: 100%; height: 40px;}
-            #result {  }
-            .main { display: flex;
-                    height: 100vh;
-                    justify-content: center;
-                    align-items: center;
-                    }
-            .logo {background:cadetblue; width:50px; height:50px;}
-        </style>
+        <link rel="stylesheet" type="text/css" href="static/style.css">
         <script type="text/javascript">
             function sum_number(){
                 var number = document.getElementById("number").value;
