--- a/templates/example.html
+++ b/templates/example.html
@@ -1,19 +1,32 @@
-<div class="banner-conversation">
-  <div class="conversation-head">
-    <div class="avatar"></div>
-    <div class="right">
-      <div class="infos">
-        <div class="name"></div>
-        <div class="verification">
-          <svg x="0px" y="0px" viewBox="0 0 16 16">
-            <path class="a" d="M14.7,9.8l0.2,2.2l-2,0.9l-0.9,2l-2.2-0.2L8,16l-1.8-1.3L4,14.9l-0.9-2l-2-0.9l0.2-2.2L0,8l1.3-1.8L1.1,4l2-0.9
-                               l0.9-2l2.2,0.2L8,0l1.8,1.3L12,1.1l0.9,2l2,0.9l-0.2,2.2L16,8L14.7,9.8z M14.7,9.8"/>
-            <polygon class="b" points="10.9,4.8 6.4,9.3 4.9,7.8 3.8,8.9 6.4,11.6 12,5.9 "/>
-          </svg>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="static/css/chatani.css">
+    <script type="text/javascript" src="static/js/example.js"></script>
+  </head>
+  <body>
+    <div class="banner-conversation">
+      <div class="conversation-head">
+        <div class="avatar"></div>
+        <div class="right">
+          <div class="infos">
+            <div class="name"></div>
+            <div class="verification">
+              <svg x="0px" y="0px" viewBox="0 0 16 16">
+                <path class="a" d="M14.7,9.8l0.2,2.2l-2,0.9l-0.9,2l-2.2-0.2L8,16l-1.8-1.3L4,14.9l-0.9-2l-2-0.9l0.2-2.2L0,8l1.3-1.8L1.1,4l2-0.9
+                                  l0.9-2l2.2,0.2L8,0l1.8,1.3L12,1.1l0.9,2l2,0.9l-0.2,2.2L16,8L14.7,9.8z M14.7,9.8"/>
+                <polygon class="b" points="10.9,4.8 6.4,9.3 4.9,7.8 3.8,8.9 6.4,11.6 12,5.9 "/>
+              </svg>
+            </div>
+          </div>
+          <div class="writing">escrevendo...</div>
         </div>
       </div>
-      <div class="writing">escrevendo...</div>
+      <div class="conversation-container">
+        <script type="text/javascript">
+        console.log("start")
+        executeConversation();
+        </script>
+      </div>
     </div>
-  </div>
-  <div class="conversation-container"></div>
-</div>
+  </body>
+</html>
