--- a/templates/admin1.html
+++ b/templates/admin1.html
@@ -1,2 +1,82 @@
-admin1
+{% extends "adminLayout.html" %}
+{% block head %}
+    {{super()}}
+    <script type="text/javascript">
+        function update() {
+            var form = document.createElement('form');
+            form.setAttribute('method', 'post');
+            form.setAttribute('action', 'insertCode');
+            form.style.display = 'hidden';
+            document.body.appendChild(form)
+            form.submit();
+        }
+    </script>
+{% endblock %}
+{% block content %}
+        <table class="table table-striped table-dark">
+            <thead >
+                <tr>
+                    <th scope="col">코드</th>
+                    <script type="text/javascript">
+                        var i;
+                        var thString = "";
+                        for(i = 0; i < 10; i++){
+                            thString += "<th scope=\"col\">구분"+(i+1)+"</th>";
+                        }
+                        document.write(thString);
+                    </script>
+                    <th style="width:8%"></th>
+                </tr>
+            </thead>
+            <tbody>
+            
+                {% for data in datas %}
+                <form class="form-horizontal" method='POST'>
+                    <tr>
+                        <th class="align-middle">
+                            <input class="form-control" id="number" name="code" type="text" maxlength="6" readonly value="{{ data.code }}"/>
+                        </th>
+                        {% for d in data.composition_list %}
+                            <td class="align-middle">
+                                <select class="form-control" value="{{d}}">
+                                    <option value="" selected disabled hidden >선택해주세요.</option>
+                                    {% for option in options %}
+                                        <option {% if d == option %}selected{% endif %}>{{option}}</option>
+                                    {% endfor %}
+                                </select>
+                            </td>
+                        {% endfor %}
+                        <td><div>
+                            <button class="btn btn-danger" formaction="deleteCode" >삭제</button>
+                            <button class="btn btn-primary" formaction="insertCode">수정</button>
+                        </td>
+                    </tr>
+                </form>
+                {% endfor %}
 
+                <form class="form-horizontal" action="insertCode" method='POST'>
+                    <tr>
+                        <th>
+                            <input class="form-control" id="number" name="code" type="text" maxlength="6"/>
+                        </th>
+                        <script type="text/javascript">
+                            var tempString = "";
+                            for(var i = 0; i < 10; i++){
+                                tempString += "<td>\
+                                <select class=\"form-control\" name=\"compos"+i+"\">\
+                                    <option value=\"\" selected disabled hidden >선택해주세요.</option>\
+                                    {% for option in options %}\
+                                        <option {% if d == option %}selected{% endif %}>{{option}}</option>\
+                                    {% endfor %}\
+                                    </select>\
+                                </td>"
+                            }
+                            
+                            document.write(tempString);
+                        </script>
+                        <td><button class="btn btn-success" type="submit">등록</button></td>
+                    </tr>
+                </form>
+            </tbody>
+        </table>
+{% endblock %}
