--- a/templates/admin2.html
+++ b/templates/admin2.html
@@ -1,1 +1,62 @@
-admin2
+{% extends "adminLayout.html" %}
+{% block head %}
+    {{super()}}
+{% endblock %}
+{% block content %}
+        <table class="table table-striped table-dark" style="width:300%;margin-right:20px;">
+            <thead>
+                <tr>
+                    <th scope="col" style="width:3%;">구분</th>
+                    <script type="text/javascript">
+                        var i;
+                        var thString = "";
+                        for(i = 0; i < 10; i++){
+                            thString += "<th scope=\"col\" style=\"width:9.3%;\">서술"+(i+1)+"</th>";
+                        }
+                        document.write(thString);
+                    </script>
+                    <th style="width:7%;">수정/삭제</th>
+                </tr>
+            </thead>
+            <tbody>
+            
+                {% for data in datas %}
+                <form class="form-horizontal" method='POST'>
+                    <tr>
+                        <th class="align-middle">
+                            <input class="form-control" name="compos" type="text" maxlength="10" readonly value="{{ data.composition }}"/>
+                        </th>
+                        {% for d in data.description_list %}
+                            <td class="align-middle">
+                                <input class="form-control" type="text" value="{{d}}">
+                            </td>
+                        {% endfor %}
+                        <td><div>
+                            <button class="btn btn-danger" formaction="deleteDesc">삭제</button>
+                            <button class="btn btn-primary" formaction="insertDesc">수정</button>
+                        </td>
+                    </tr>
+                </form>
+                {% endfor %}
+
+                <form class="form-horizontal" action="insertDesc" method='POST'>
+                    <tr>
+                        <th>
+                            <input class="form-control" name="composition" type="text" maxlength="6"/>
+                        </th>
+                        <script type="text/javascript">
+                            var tempString = "";
+                            for(var i = 0; i < 10; i++){
+                                tempString += "<td>\
+                                    <input class=\"form-control\" type=\"text\" name=\"desc"+(i+1)+"\">\
+                                </td>" 
+                            }
+                            
+                            document.write(tempString);
+                        </script>
+                        <td><button class="btn btn-success" type="submit">등록</button></td>
+                    </tr>
+                </form>
+            </tbody>
+        </table>
+{% endblock %}
