--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,149 @@
 
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="static/css/chatani.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  </head>
+  <body>
+    <div class="banner-conversation">
+      <div class="conversation-head">
+        <div class="avatar"></div>
+        <div class="right">
+          <div class="infos">
+            <div class="name"></div>
+            <div class="verification">
+              <svg x="0px" y="0px" viewBox="0 0 16 16">
+                <path class="a" d="M14.7,9.8l0.2,2.2l-2,0.9l-0.9,2l-2.2-0.2L8,16l-1.8-1.3L4,14.9l-0.9-2l-2-0.9l0.2-2.2L0,8l1.3-1.8L1.1,4l2-0.9
+                                  l0.9-2l2.2,0.2L8,0l1.8,1.3L12,1.1l0.9,2l2,0.9l-0.2,2.2L16,8L14.7,9.8z M14.7,9.8"/>
+                <polygon class="b" points="10.9,4.8 6.4,9.3 4.9,7.8 3.8,8.9 6.4,11.6 12,5.9 "/>
+              </svg>
+            </div>
+          </div>
+          <div class="writing">escrevendo...</div>
+        </div>
+      </div>
+      <div class="conversation-container">
+        <script type="text/javascript">
+        var conversationData = {{ resultString|safe }}
+  var currentConversation = 0;
+  
+  var keyPressDelay = 20,
+      betweenConversationDelay = 100;
+  
+  var bannerConversation = $('.banner-conversation'),
+      conversationHead = bannerConversation.find('.conversation-head'),
+      conversationName = conversationHead.find('.name'),
+      conversationWriting = conversationHead.find('.writing'),
+      conversationContainer = bannerConversation.find('.conversation-container'),
+      messageTemplate = $('<div class="message hidden"></div>');
+  
+  function scrollConversationToBottom(){
+    conversationContainer.animate({
+      scrollTop: conversationContainer.outerHeight()
+    }, 400);
+  };
+  
+  function checkIfIsEmoji(string){
+    if(!isNaN(string)) {
+      return false;
+    }
+    
+    return Array.from(string.split(/[\ufe00-\ufe0f]/).join("")).length === 1;
+  }
+  
+  function hideConversationWriting() {
+    conversationWriting.animate({
+      opacity: 0
+    }, 200, function() {
+      $(this).slideUp(200);
+    });
+  }
+  
+  function showConversationWriting() {
+    conversationWriting.slideDown(200, function(){
+      $(this).animate({
+        opacity: 1
+      }, 200);
+    });
+  }
+  
+  function executeConversation() {
+    var delayTime = 0;
+  
+    var conversation = conversationData[currentConversation];
+    console.log("conversationName : " + conversationName)
+    conversationName.text(conversation.name);
+  
+    $.each(conversation.messages, function(messageIndex, message) {
+      var newMessage = messageTemplate.clone();
+  
+      newMessage.html(message.message);
+  
+      if(message.sender) {
+        newMessage.addClass('sender');
+      }
+  
+      if(checkIfIsEmoji(message.message)) {
+        newMessage.addClass('emoji');
+      }
+  
+      var messageWriteDelay = message.message.length * keyPressDelay,
+          messageBetweenDelay = Math.floor(Math.random() * (3000 - 1000) + 1000);
+  
+      delayTime += messageWriteDelay + messageBetweenDelay;
+  
+      // Esconde/exibe a mensagem de que o usuário está escrevendo
+      setTimeout(function(){
+        if(message.sender) {
+          hideConversationWriting();
+        } else {
+          showConversationWriting();
+        }
+      }, delayTime - messageBetweenDelay);
+  
+      setTimeout(function(){
+        conversationContainer.append(newMessage);
+  
+        scrollConversationToBottom();
+  
+        setTimeout(function(){
+          newMessage.removeClass('hidden');
+        }, 100);
+      }, delayTime);
+  
+      if(conversation.messages.length === messageIndex + 1) {
+        setTimeout(function(){
+          hideConversationWriting();
+        }, delayTime);
+  
+        delayTime += betweenConversationDelay
+  
+        setTimeout(function(){
+          var messages = conversationContainer.find('.message');
+  
+          messages.css({
+            opacity: 0
+          });
+  
+          setTimeout(function(){
+            messages.remove();
+          }, 400);
+  
+          currentConversation += 1;
+  
+          if(!conversationData[currentConversation]){
+            currentConversation = 0;
+          }
+  
+          executeConversation();
+        }, delayTime);
+      }
+    });
+  }
+  
+          executeConversation();
+        </script>
+      </div>
+    </div>
+  </body>
+</html>
