--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -15,14 +15,25 @@
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" >
                 <a class="navbar-brand color_black" href="/manager1" style="font-weight: bold;">관리자 페이지</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto" id="navContent">
-                        <li class="nav-item color_gray">
-                            <a class="nav-link" href="/manager1">코드 관리</a>
+                        <li class="nav-item {% if layout==1 %}active{%endif%}">
+                            <a class="nav-link color_gray" href="/manager1">코드 관리</a>
                         </li>
-                        <li class="nav-item" >
+                        <li class="nav-item {% if layout==2 %}active{%endif%}">
                             <a class="nav-link color_gray" href="/manager2">구분/디스크립트 관리</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="navbar-collapse collapse dual-collapse2" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link color_gray bold_text" data-toggle="modal" data-target="#exampleModal">일괄업로드</a>
                         </li>
                     </ul>
                 </div>
@@ -38,5 +49,29 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">일괄 업로드</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                <button type="button" class="btn btn-primary">업로드</button>
+            </div>
+            </div>
+        </div>
+        </div>
     {% endblock %}
 {% endblock %}
