--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -8,6 +8,35 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>관리자 페이지</title>
+
+        <script type="text/javascript">
+            var request = new XMLHttpRequest(); 
+            request.onreadystatechange = function() {
+                if (request.readyState == XMLHttpRequest.DONE) {
+                    var json = JSON.parse(request.responseText);
+                    console.log(json);
+                    
+                    var check = false;
+                    check = json.check;
+                    if(!check){
+                        msg="* 일치하는 코드가 없습니다.";
+                            document.getElementById("result_msg").innerText = msg;
+                            document.getElementById("result_msg").style = "color: red;";
+                            return ;
+                    }else{
+                        document.getElementById("result_msg").innerText = "* 결과가 나왔습니다.";
+                        document.getElementById("result_msg").style = "color: green;";
+                        document.getElementById("result_button").text = "결과보기";
+                        document.getElementById("result_button").type = "submit";
+                        document.getElementById("result_button").style = "background-color:orange;";
+                        
+                        document.getElementById("result_button").onclick = getResult(number);
+                    }
+                }
+            }
+            var url = 'uploadFile';
+        </script>
+
     {% endblock %}
 
     {% block body%}
@@ -51,27 +80,40 @@
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">일괄 업로드</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">일괄 업로드</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                </form>
+                    <form action="upload" method="POST" enctype="multipart/form-data">
+                        <div class="modal-body">
+                                <div class="form-group">
+                                    <input type="file" class="form-control-file" name="file" id="exampleFormControlFile1">
+                                    </br>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                                        <label class="form-check-label" for="exampleRadios1">
+                                            코드 업로드
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                                        <label class="form-check-label" for="exampleRadios2">
+                                            디스크립션 업로드
+                                        </label>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                            <input type="submit" class="btn btn-primary" value="업로드" ></button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
-                <button type="button" class="btn btn-primary" >업로드</button>
-            </div>
-            </div>
-        </div>
         </div>
     {% endblock %}
 {% endblock %}
