코드 4~8 자리로 변경

--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -88,7 +88,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form action="upload" method="POST" enctype="multipart/form-data">
+                    <form action="manager/upload" method="POST" enctype="multipart/form-data">
                         <div class="modal-body">
                                 <div class="form-group">
                                     <input type="file" class="form-control-file" name="file" id="exampleFormControlFile1">
