관리자 정보 변경 페이지 추가

--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -56,6 +56,9 @@
                         <li class="nav-item {% if layout==2 %}active{%endif%}">
                             <a class="nav-link color_gray" href="/manager2">구분/디스크립트 관리</a>
                         </li>
+                        <li class="nav-item {% if layout==3 %}active{%endif%}">
+                            <a class="nav-link color_gray" href="/manager3">관리자 정보 변경</a>
+                        </li>
                     </ul>
                 </div>
 
