--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     {% block body %}
         <div class="center-block mx-auto" style="width:300px; margin-top:100px">
         <h3 class="text-center">관리자 로그인</h3>
-        <form class="p-4" action="/loginCheck" method="post">
+        <form class="p-4" action="/loginCheck" method="POST">
             <div class="form-group">
                 <label for="exampleDropdownFormEmail2">관리자 ID</label>
                 <input type="text" name="userid" value="admin" class="form-control" id="exampleDropdownFormEmail2" placeholder="admin" disabled>
