complete implementation login page

--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -67,6 +67,9 @@
                         <li class="nav-item">
                             <a class="nav-link color_gray bold_text" data-toggle="modal" data-target="#exampleModal">일괄업로드</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link color_gray bold_text" href="/logout">로그아웃</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
