--- a/templates/admin3.html
+++ b/templates/admin3.html
@@ -5,7 +5,7 @@
 {% block content %}
         <div class="center-block mx-auto" style="width:300px; margin-top:100px">
             <h3 class="text-center">관리자 정보 변경</h3>
-            <form class="p-4" action="/loginCheck" method="POST">
+            <form class="p-4" action="/cngAdmPwd" method="POST">
                 <div class="form-group">
                     <label for="currentPassword">현재 비밀번호</label>
                     <input type="password" name="curPwd" class="form-control" id="currentPassword" placeholder="Password">
