--- a/templates/result.html
+++ b/templates/result.html
@@ -97,7 +97,7 @@
                 if(message.sender) {
                   hideConversationWriting();
                 } else {
-                   ();
+                  showConversationWriting();
                 }
               }, delayTime - messageBetweenDelay);
           
