--- a/templates/admin2.html
+++ b/templates/admin2.html
@@ -19,6 +19,27 @@
                 </tr>
             </thead>
             <tbody>
+                <form class="form-horizontal" action="/insertDesc" method='POST'>
+                    <tr >
+                        <th class="align-middle">
+                            <input class="form-control" name="compos" type="text" maxlength="6"/>
+                        </th>
+                        <script type="text/javascript">
+                            var tempString = "";
+                            for(var i = 1; i < 11; i++){
+                                tempString += "<td class=\"align-middle\">\
+                                    <input class=\"form-control\" type=\"text\" name=\"desc"+(i+1)+"\">\
+                                </td>" 
+                            }
+                            
+                            document.write(tempString);
+                        </script>
+                        <td><button class="btn btn-success" type="submit">등록</button></td>
+                    </tr>
+                </form>
+            
+            </tbody>
+            <tbody>
             
                 {% for data in datas %}
                 <form class="form-horizontal" method='POST'>
@@ -32,31 +53,34 @@
                             </td>
                         {% endfor %}
                         <td><div>
-                            <button class="btn btn-danger" formaction="deleteDesc">삭제</button>
-                            <button class="btn btn-primary" formaction="insertDesc">수정</button>
+                            <button class="btn btn-danger" formaction="/deleteDesc">삭제</button>
+                            <button class="btn btn-primary" formaction="/insertDesc">수정</button>
                         </td>
                     </tr>
                 </form>
                 {% endfor %}
 
-                <form class="form-horizontal" action="insertDesc" method='POST'>
-                    <tr>
-                        <th>
-                            <input class="form-control" name="compos" type="text" maxlength="6"/>
-                        </th>
-                        <script type="text/javascript">
-                            var tempString = "";
-                            for(var i = 1; i < 11; i++){
-                                tempString += "<td>\
-                                    <input class=\"form-control\" type=\"text\" name=\"desc"+(i+1)+"\">\
-                                </td>" 
-                            }
-                            
-                            document.write(tempString);
-                        </script>
-                        <td><button class="btn btn-success" type="submit">등록</button></td>
-                    </tr>
-                </form>
+                
             </tbody>
         </table>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item {% if now == '1' %} disabled {% endif %}">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                </li>
+                {% for i in range(1, numofpage+1)%}
+                    <li class="page-item {% if i == now %} active {% endif %}"><a class="page-link" href="/manager2/{{ i }}">{{i}}</a></li>
+                {% endfor %}
+                <li class="page-item {% if now == numofpage %} disabled {% endif %}">
+                <a class="page-link " href="/manager2/{{now}}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+                </li>
+            </ul>
+        </nav>
 {% endblock %}
