--- a/templates/adminLayout.html
+++ b/templates/adminLayout.html
@@ -37,7 +37,7 @@
             var url = 'uploadFile';
 
             function downloadTemplate(){
-                location.href = "manager/downloadTemplate"
+                location.href = "/manager/downloadTemplate"
             }
 
         </script>
@@ -99,7 +99,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form action="manager/upload" method="POST" enctype="multipart/form-data">
+                    <form action="/manager/upload" method="POST" enctype="multipart/form-data">
                         <div class="modal-body">
                                 <div class="form-group">
                                     <input type="file" class="form-control-file" name="file" id="exampleFormControlFile1">
