--- a/templates/admin2.html
+++ b/templates/admin2.html
@@ -66,17 +66,24 @@
 
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-                <li class="page-item {% if now == '1' %} disabled {% endif %}">
-                <a class="page-link" href="#" aria-label="Previous">
+                {% set page_start = (((now-1)/ 10)|int)+1 %}
+                {% set page_end = page_start + 10%}
+                {% if page_end >  numofpage %}
+                    {% set page_end = numofpage +1 %}
+                {% endif %}
+
+                <li class="page-item {% if page_start == 1 %} disabled {% endif %}">
+                <a class="page-link" href="/manager2/{{ page_start - 10 }}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
                 </li>
-                {% for i in range(1, numofpage+1)%}
+
+                {% for i in range(page_start, page_end) %}
                     <li class="page-item {% if i == now %} active {% endif %}"><a class="page-link" href="/manager2/{{ i }}">{{i}}</a></li>
                 {% endfor %}
-                <li class="page-item {% if now == numofpage %} disabled {% endif %}">
-                <a class="page-link " href="/manager2/{{now}}" aria-label="Next">
+                <li class="page-item {% if page_start + 10 > numofpage %} disabled {% endif %}">
+                <a class="page-link " href="/manager2/{{ page_start + 10}}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
