--- a/templates/admin1.html
+++ b/templates/admin1.html
@@ -20,8 +20,8 @@
                     <script type="text/javascript">
                         var i;
                         var thString = "";
-                        for(i = 0; i < 15; i++){
-                            thString += "<th scope=\"col\">구분"+(i+1)+"</th>";
+                        for(i = 1; i < 16; i++){
+                            thString += "<th scope=\"col\">구분"+(i)+"</th>";
                         }
                         document.write(thString);
                     </script>
